[views] fix notes index

--- a/app/views/notes/_index.html.slim
+++ b/app/views/notes/_index.html.slim
@@ -10,7 +10,7 @@
   #new-note.hide
 .row-fluid
   .span12
-    table.index.table.table-striped.table-bordered.table-condensed *{:id => [ @notable.class.to_s.downcase + '-notes-index']}
+    table.index.table.table-striped.table-bordered.table-condensed *{:id =>  @notable.class.to_s.downcase + '-notes-index'}
       thead
         tr
           th
