--- a/app/views/courses/create.js.erb
+++ b/app/views/courses/create.js.erb
@@ -1,4 +1,10 @@
-$('#courses-index tbody').append('<%= render_js_partial("course_unit", {:course => @course}) %>');
-$('#new-course').slideToggle();
-$('#new-course-link').show();
-showNotice("<%= render_flash %>");
+<%- if @course.errors.any? %>
+
+<% else %>
+	$('#courses-index tbody').append('<%= render_js_partial("course", {:course => @course}) %>');
+	$('.courses-count').html('<%= print_count(@courses_count + 1, t("courses.list")) %>');
+
+	$('#new-course').slideToggle();
+	$('#new-course-link').show();
+	showNotice("<%= render_flash %>");
+<% end %>
