--- a/app/views/courses/index.html.slim
+++ b/app/views/courses/index.html.slim
@@ -3,13 +3,12 @@
   .span10
     .row-fluid
       #new-course.hide
-        =render 'form'
     .row-fluid
       .pull-left
         h4.h4-vm.courses-count
           = print_count(@courses.count, t('courses.list'))
       .pull-right
-        = link_to_new t("courses.new"), new_course_path, :id => "new-course-link"
+        = ajax_link_to_new t("courses.new"), new_course_path, :id => "new-course-link"
     row-fluid
       .span12
         hr/
