[views] refactoring in class group views

--- a/app/views/class_groups/courses/_form.html.slim
+++ b/app/views/class_groups/courses/_form.html.slim
@@ -9,3 +9,5 @@
       .row-fluid.mt-s
         = submit_button t("courses.save"), :id => 'submit-course-button', :class => "span6 btn btn-primary"
         = link_to_cancel :id => "cancel-class-group-course-link"
+
+= javascript_include_tag 'class_groups/courses'
