--- a/app/views/class_groups/semesters/_form.html.slim
+++ b/app/views/class_groups/semesters/_form.html.slim
@@ -13,3 +13,5 @@
       .row-fluid.mt-s
         = submit_button t("semesters.save"), :id => 'submit-class-group-semester-button', :class => "span6 btn btn-primary"
         = link_to_cancel  :id => "cancel-class-group-semester-link",:style => "min-height:0px"
+
+= javascript_include_tag 'class_groups/semesters'
