[controllers][views] full refactoring syllabus views

--- a/app/views/syllabuses/_syllabus.html.slim
+++ b/app/views/syllabuses/_syllabus.html.slim
@@ -1,9 +1,6 @@
-tr
-  td= link_to syllabus.code, edit_syllabus_path(syllabus)
-  td= syllabus.name
-  td= syllabus.description
-  td= syllabus.credits
-  td
-    = link_to_show syllabus
-    = link_to_edit edit_syllabus_path(syllabus)
-    = ajax_link_to_delete syllabus
+tr class="syllabus-#{syllabus.id}"
+	= render 'shared/fields/syllabus_fields', :syllabus => syllabus
+	td
+	  = link_to_show syllabus
+	  = ajax_link_to_edit [:edit, syllabus]
+	  = ajax_link_to_delete syllabus
