--- a/app/views/syllabuses/index.html.slim
+++ b/app/views/syllabuses/index.html.slim
@@ -3,8 +3,8 @@
   .span10
     .row-fluid
       .pull-left 
-          h4.mt-xs.mb-0.class_groups-count 
-            = print_count(@syllabuses.count, t("syllabusess.list"))
+          h4.mt-xs.mb-0.syllabuses-count 
+            = print_count(@syllabuses.count, t("syllabuses.list"))
       .pull-right
         = link_to_new t("syllabuses.new"), '', :id => "new-syllabus-link"
     .row-fluid
@@ -14,20 +14,5 @@
         =render 'form'
     .row-fluid
       .span12.well
-        table#syllabuses-index.index.table.table-striped.table-bordered.table-condensed
-          tr
-            th.btn-inverse data-field=t('syllabuses.code') = t('syllabuses.code')
-            th.btn-inverse data-field=t('syllabuses.name') = t('syllabuses.name')
-            th.btn-inverse data-field=t('syllabuses.description') = t('syllabuses.description')
-            th.btn-inverse data-field=t('syllabuses.credits') = t('syllabuses.credits')
-            th.btn-info data-field=t('manage') style="width:94px" = t('manage')
-          - @syllabuses.each do |syllabus|
-            tr
-              td= link_to syllabus.code, edit_syllabus_path(syllabus)
-              td= syllabus.name
-              td= syllabus.description
-              td= syllabus.credits
-              td
-                = link_to_show syllabus
-                = link_to_edit [:edit, syllabus]
-                = ajax_link_to_delete syllabus
+        =render 'syllabuses/syllabuses'
+        
