[fix views] class group semesters

--- a/app/views/class_groups/semesters/create.js.erb
+++ b/app/views/class_groups/semesters/create.js.erb
@@ -1,14 +1,11 @@
-$('#class-group-semesters-index tbody').append('<%= render_js_partial("semester", {:semester => @semester}) %>');
-
-$('#new-class-group-semester-link').show();
-
 showNotice("<%= render_flash %>");
-$('#class-group-semesters-tab-link').html('<%= print_count(@class_group.semesters.count, t("semesters.semesters")) %>');
-$('.class-group-semesters-count').html('<%= print_count(@class_group.semesters.count, t("semesters.list")) %>');
-
 <%- if @semester.errors.any? %>
 	$('#new-class-group-semester-form-errors').html('<%= render_js_partial("shared/errors", {:target => @semester}) %>');
 <%- else %>
+  $('#class-group-semesters-index tbody').append('<%= render_js_partial("semester", {:semester => @semester}) %>');
 	$('#new-class-group-semester').slideToggle();
-	$('#new-class-group-semester-form-errors').slideToggle();
+	$('#new-class-group-semester-form-errors').html('');
+  $('#new-class-group-semester-link').show();
+  $('#class-group-semesters-tab-link').html('<%= print_count(@class_group.semesters.count, t("semesters.semesters")) %>');
+  $('.class-group-semesters-count').html('<%= print_count(@class_group.semesters.count, t("semesters.list")) %>');
 <% end %>
