[spec/requests] More helpers and refactor specs to use them

--- a/app/views/class_groups/index.html.slim
+++ b/app/views/class_groups/index.html.slim
@@ -4,7 +4,7 @@
     .row-fluid
       #new-class-group.hide
       .pull-left 
-        h4.mt-xs.mb-0.class_groups-count 
+        h4.mt-xs.mb-0.class-groups-count 
           = print_count(@class_groups.count, t("class_groups.list"))
       .pull-right
         = ajax_link_to_new t("class_groups.new"), new_class_group_path,:id => "new-class-group-link"
