--- a/app/views/class_groups/destroy.js.erb
+++ b/app/views/class_groups/destroy.js.erb
@@ -1,2 +1,2 @@
 showNotice("<%= render_flash %>");
-$('.class_groups-count').html('<%= print_count(@class_groups_count - 1, t("class_groups.list")) %>');
+$('.class-groups-count').html('<%= print_count(@class_groups_count - 1, t("class_groups.list")) %>');
