--- a/app/views/class_groups/courses/_form.html.slim
+++ b/app/views/class_groups/courses/_form.html.slim
@@ -7,7 +7,7 @@
         = f.hidden_field :class_group_id, :value => @class_group.id
     
       .row-fluid.mt-s
-        = submit_button t("courses.save"), :id => 'submit-course-button', :class => "span6 btn btn-primary"
+        = submit_button t("courses.save"), :id => 'submit-class-group-course-button', :class => "span6 btn btn-primary"
         = link_to_cancel :id => "cancel-class-group-course-link"
 
 = javascript_include_tag 'class_groups/courses'
