--- a/app/views/class_groups/courses/create.js.erb
+++ b/app/views/class_groups/courses/create.js.erb
@@ -1,8 +1,8 @@
 $('#new-class-group-course').slideToggle();
 $('#new-class-group-course-link').show();
 
-$('table#courses-index tbody').append('<%= render_js_partial("course", {:enrollment => @class_group_course_enrollment}) %>');
+$('#class-group-courses-index tbody').append('<%= render_js_partial("course", {:enrollment => @class_group_course_enrollment}) %>');
 
 showNotice("<%= render_flash %>");
 $('#class-group-courses-tab-link').html('<%= print_count(@class_group.courses.count, t("courses.courses")) %>');
-$('.courses-count').html('<%= print_count(@class_group.courses.count, t("courses.list")) %>');
+$('.class-group-courses-count').html('<%= print_count(@class_group.courses.count, t("courses.list")) %>');
