--- a/app/views/class_groups/show.html.slim
+++ b/app/views/class_groups/show.html.slim
@@ -23,35 +23,31 @@
           ul.nav.nav-tabs
             li#class_group_students_tab.active
               a#class-group-enrollments-tab-link data-toggle="tab" href="#class_group_enrollments"
-                =t("class_group_enrollments.list")+"（ "+@class_group.class_group_enrollments.count.to_s+" ）"
+                = print_count(@class_group.class_group_enrollments.count, t("class_group_enrollments.list"))
             li
               a#class-group-semesters-tab-link data-toggle="tab" href="#semesters"
-                =t("semesters.semesters")+"（ "+@class_group.semesters.count.to_s+" ）"
+                = print_count(@class_group.semesters.count, t("semesters.plural"))
             li
               a#class-group-courses-tab-link data-toggle="tab" href="#courses"
-                = t("courses.list")+"（ "+@class_group.courses.count.to_s+" ）"
+                = print_count(@class_group.courses.count, t("courses.plural"))
           .tab-content
 
             #class_group_enrollments.tab-pane.active
               .row-fluid#class_group_enrollments_list
                 =render 'class_groups/students/students'
               .row-fluid
-                /TODO: server side validation for duplicate class group enrollment 
                 div id='enrollment_form' style='display:none'
-                  //=render 'new_class_group_enrollment'
 
             #semesters.tab-pane
               .row-fluid
                 = render 'class_groups/semesters/semesters'
               .row-fluid
-                /TODO need to redirect to the right route after create!
                 div id="semester_form" style="display:none"
                   
             #courses.tab-pane
               .row-fluid
                 = render 'class_groups/courses/courses'
               .row-fluid
-                /TODO need to redirect to the right route after create! /
                 div id="course_form" style="display:none"
     
     .row-fluid
