--- a/app/views/students/_student_modal.html.slim
+++ b/app/views/students/_student_modal.html.slim
@@ -20,4 +20,4 @@
 		    .span12.well
 		      .span9
 		        = form.submit nil, :id => 'submit-student-button', :class => "span12 btn btn-primary update_student"
-		      = link_to_back students_path, :id => 'back-student-link', :class => "span3 btn"
+		      = link_to_cancel :id => 'cancel-student-link', :class => "span3 btn"
