--- a/app/views/exams/grading.html.slim
+++ b/app/views/exams/grading.html.slim
@@ -24,3 +24,22 @@ coffee:
     Backbone.history.start()
 
     console.log $(".exam_grid")
+
+    tableSizeFix = ->
+      $("html").css "overflow-x", "hidden"
+      $("html").css "overflow-y", "hidden"
+      fixW = 303
+      fixW += $(".btn-warning").length * 131
+      if $(".exam_infos").length > 1
+        fixW += ($(".btn-inverse").length - 1) * 76
+        fixW += 302
+      else
+        fixW += $(".btn-inverse").length * 76
+      $(".exam_grid").width(fixW)
+      if fixW > $(window).width() - 80
+        fixW = $(window).width() - 80
+      fixH = $(".exam_grid").height()
+      if fixH > $(window).height() - $(".exam_grid").offset().top - 40
+        fixH = $(window).height() - $(".exam_grid").offset().top - 40
+      $('.exam_grid').tablefix({width: fixW, height: fixH, fixRows: 2, fixCols: 3})
+    tableSizeFix()
