--- a/app/views/shared/fields/_student_fields.html.slim
+++ b/app/views/shared/fields/_student_fields.html.slim
@@ -1,9 +1,9 @@
 -if @enrolled_students && @enrolled_students.include?(student.id.to_s)
-	td = image_tag 'check.png', :class => 'enrolled'
--elsif @selected_students 
-  td = check_box_tag "","", (@selected_students.include?('student-'+student.id.to_s) ? true : false), :class => "student-check student-#{student.id}", :id => "student-#{student.id}"
+	td.vm-tc = image_tag 'check.png', :class => 'enrolled'
+-elsif @selected_students
+  td.vm-tc = check_box_tag "","", (@selected_students.include?('student-'+student.id.to_s) ? true : false), :class => "student-check student-#{student.id}", :id => "student-#{student.id}"
 -else
-  td = check_box_tag "","", false, :class => "student-check student-#{student.id}", :id => "student-#{student.id}"
+  td.vm-tc = check_box_tag "","", false, :class => "student-check student-#{student.id}", :id => "student-#{student.id}"
 td.surname = student.surname
 td.name = student.name
 td.birth = student.birth_date
