--- a/app/views/notes/_index.html.slim
+++ b/app/views/notes/_index.html.slim
@@ -1,13 +1,13 @@
 .row-fluid
     .pull-left
-      h4.mt-xs.mb-0 *{:class => [ @notable.class.to_s.downcase + '-notes-count' ]}
+      h4.mt-xs.mb-0 *{:class => @notable.class.to_s.downcase + '-notes-count'}
         = print_count(@notable.notes.count, t('notes.list'))
     .pull-right
-        = ajax_link_to_new t("notes.add"), [:new, @notable, :note], :id => "new-note-link"
+        = ajax_link_to_new t("notes.add"), [:new, @notable, :note], :id => 'new-' + @notable.class.to_s.underscore + '-note-link'
 .row-fluid
   hr
 .row-fluid
-  #new-note.hide
+  .hide *{:id => 'new-' + @notable.class.to_s.underscore + '-note'}
 .row-fluid
   .span12
     table.index.table.table-striped.table-bordered.table-condensed *{:id =>  @notable.class.to_s.downcase + '-notes-index'}
