--- a/app/views/notes/new.js.erb
+++ b/app/views/notes/new.js.erb
@@ -1,2 +1,3 @@
-$('#new-note').html('<%= render_js_partial("form") %>').slideToggle();;
-$('#new-note-link').hide();
+
+$('#new-<%=notable_resource%>-note').html('<%= render_js_partial("form") %>').slideToggle();;
+$('#new-<%=notable_resource%>-note-link').hide();
