--- a/app/views/course_groups/create.js.erb
+++ b/app/views/course_groups/create.js.erb
@@ -1,8 +1,10 @@
 <%- if @course_group.errors.any? %>
   $('#course-group-form-errors').html('<%= render_js_partial("shared/errors", {:target => @course_group}) %>');
 <% else %>
-  $('#course-groups-index').html('<%= render_js_partial("course_groups", {:course_groups => @course_groups}) %>');
+	$('#course-groups-index tbody').append('<%= render_js_partial("course_group", {:course_group => @course_group}) %>');
 	showNotice("<%= render_flash %>");
+	$('.course-groups-count').html('<%= print_count(@course_groups_count + 1, t("course_groups.list")) %>');
+	$('#new-course-group').slideToggle()
+	$('#new-course-group-link').show()
+	$('#new-course-group form')[0].reset();
 <% end %>
-
-$('#new-course-group form')[0].reset();
