--- a/app/views/course_groups/index.html.slim
+++ b/app/views/course_groups/index.html.slim
@@ -3,16 +3,21 @@
   .span10
     .row-fluid
       .pull-left 
-        h3 = t("course_groups.list")
+        h4.h4-vm.course-groups-count
+          = print_count(@course_groups.count, t('course_groups.list'))
       .pull-right
         = ajax_link_to_new t("course_groups.new"), new_course_group_path, :id => "new-course-group-link"
     .row-fluid
       #course-group-form-errors
       #new-course-group.hide
-        =render 'form'
       .span12
         hr/
     .row-fluid
       .span12.well
-        #course-groups-index
-          =render 'course_groups', :course_groups => @course_groups    
+        table#course-groups-index.index.table.table-striped.table-bordered.table-condensed
+          thead
+            tr
+              th.btn-inverse = sortable 'name',  t('name')
+              th.btn-info style="width:94px" = t('manage')
+          tbody
+            =render :partial => 'course_group', :collection => @course_groups, :as => :course_group
