--- a/app/views/course_groups/new.js.erb
+++ b/app/views/course_groups/new.js.erb
@@ -1,2 +1,2 @@
-$('#new-course-group').slideToggle();
+$('#new-course-group').html('<%= render_js_partial("form") %>').slideDown()
 $('#new-course-group-link').hide();
