--- a/app/views/course_groups/update.js.erb
+++ b/app/views/course_groups/update.js.erb
@@ -1,4 +1,4 @@
-$('#course-groups-index').html('<%= render_js_partial("course_groups/course_groups", {:course_groups => @course_groups}) %>');
+$('#course-group-<%= @course_group.id %>').html('<%= render_js_partial("course_groups/course_group", {:course_group => @course_group}) %>');
 $('#edit-course-group-modal').modal('hide');
 showNotice("<%= render_flash %>");
 
