--- a/app/views/class_groups/semesters/_semester_modal.html.slim
+++ b/app/views/class_groups/semesters/_semester_modal.html.slim
@@ -1,6 +1,8 @@
+
 #semester-modal.modal.hide
   .modal-header
     button type="button" class="close" data-dismiss="modal" ×
     h1 Edit Semester
+    #class-group-semester-form-errors
   .modal-body
     =render 'form'
