--- a/app/views/class_groups/semesters/update.js.erb
+++ b/app/views/class_groups/semesters/update.js.erb
@@ -1,5 +1,12 @@
-$('#semester-modal').modal('hide');
-$('#semester-modal').remove();
-var currentSemesterPeriod = $("#semester-<%= @semester.id %>  .period");
-currentSemesterPeriod.html("<%= @semester.starting.strftime("%m/%d/%Y") + " - " + @semester.ending.strftime("%m/%d/%Y") %>")
 showNotice("<%= render_flash %>");
+<%- if @semester.errors.any? %>
+  $('#class-group-semester-form-errors').html('<%= render_js_partial("shared/errors", {:target => @semester}) %>');
+<%- else %>
+  $('#class-group-semester-form-errors').html('');
+  $('#semester-modal').modal('hide');
+  $('#semester-modal').remove();
+  var currentSemesterPeriod = $("#semester-<%= @semester.id %>  .period");
+  currentSemesterPeriod.html("<%= @semester.starting.strftime("%m/%d/%Y") + " - " + @semester.ending.strftime("%m/%d/%Y") %>")
+  $('#class-group-semesters-tab-link').html('<%= print_count(@class_group.semesters.count, t("semesters.semesters")) %>');
+  $('.class-group-semesters-count').html('<%= print_count(@class_group.semesters.count, t("semesters.list")) %>');
+<% end %>
