[fix/specs/views] failing specs for missing flashes or refactir spec to use new helpers

--- a/app/views/syllabuses/exams/destroy.js.erb
+++ b/app/views/syllabuses/exams/destroy.js.erb
@@ -1,2 +1,3 @@
 $('.exams-count').html('<%= print_count(@syllabus.exams.count, t("exams.list")) %>');
 showNotice("<%= render_flash %>");
+alert('hello')
