--- a/app/views/courses/show.html.slim
+++ b/app/views/courses/show.html.slim
@@ -50,7 +50,7 @@
     .row-fluid
       .span12.well
         #course-notes
-          = render :partial => 'notes/index'
+          = render :partial => 'notes/notes'
 
     .row-fluid
       .span12.well
