--- a/app/views/exams/_exam_show.html.slim
+++ b/app/views/exams/_exam_show.html.slim
@@ -38,7 +38,7 @@
 .row-fluid
   .span12.well
     #exam-notes
-      = render :partial => 'notes/index'
+      = render :partial => 'notes/notes'
 
 .row-fluid
   .span12.well
