--- a/app/views/syllabuses/show.html.slim
+++ b/app/views/syllabuses/show.html.slim
@@ -56,7 +56,7 @@
     .row-fluid
       .span12.well
         #syllabus-notes
-          = render :partial => 'notes/index'
+          = render :partial => 'notes/notes'
     .row-fluid
       .span12.well
         = link_to_edit_with_text [:edit, @syllabus], :class => "span9 btn btn-warning edit-link", :style => "min-height:0px", :remote => true
