--- a/app/views/class_groups/show.html.slim
+++ b/app/views/class_groups/show.html.slim
@@ -52,8 +52,8 @@
     
     .row-fluid
       .span12.well
-        #class_group-notes
-          = render :partial => 'notes/index'
+        #class-group-notes
+          = render :partial => 'notes/notes'
           
     .row-fluid
       .span12.well
