--- a/app/views/students/_showtable.html.slim
+++ b/app/views/students/_showtable.html.slim
@@ -20,7 +20,7 @@
 .row-fluid
   .span12.well
     #student-notes
-      = render :partial => 'notes/index'
+      = render :partial => 'notes/notes'
 .row-fluid
   .span12.well
     .span4
