--- a/app/views/courses/update.js.erb
+++ b/app/views/courses/update.js.erb
@@ -1,8 +1,10 @@
-$('#course-modal').modal('hide');
-$('#course-modal').remove();
 showNotice("<%= render_flash %>");
+<%- unless @course.errors.any? %>
+  $('#course-modal').modal('hide');
+  $('#course-modal').remove();
 
-//update from index page
-$(".course-<%= @course.id %> .syllabus").html( "[<%= @course.syllabus.code + "]:" +  @course.syllabus.name + "-" + @course.code %>");
-//update from show page
-$(".course-table tbody tr").html('<%= render_js_partial("shared/fields/course_show_fields", {:course => @course}) %>');
+  //update from index page
+  $(".course-<%= @course.id %> .syllabus").html( "[<%= @course.syllabus.code + "]:" +  @course.syllabus.name + "-" + @course.code %>");
+  //update from show page
+  $(".course-table tbody tr").html('<%= render_js_partial("shared/fields/course_show_fields", {:course => @course}) %>');
+<% end %>
