[refacor] syllabus exams update and edit thru ajax modal + specs, flashes

--- a/app/views/syllabuses/exams/update.js.erb
+++ b/app/views/syllabuses/exams/update.js.erb
@@ -1,1 +1,4 @@
 showNotice("<%= render_flash %>")
+$('#edit-syllabus-exam-modal').modal('hide')
+$('tr#exam-<%= @exam.id %>').html('<%= render_js_partial("syllabuses/exams/exam_fields", {:exam_syllabus => @exam_syllabus}) %>');
+
