--- a/app/views/syllabuses/exams/_exam.html.slim
+++ b/app/views/syllabuses/exams/_exam.html.slim
@@ -1,11 +1,4 @@
 - unless exam_syllabus.exam.nil? || exam_syllabus.exam.new_record? || !exam_syllabus.exam
-  tr
-    td= exam_syllabus.exam.name
-    td= exam_syllabus.exam.description
-    td= exam_syllabus.exam.adjustments
-    td= exam_syllabus.exam.weight
-    td= exam_syllabus.exam.use_weighting
-    td
-      = link_to_show exam_syllabus.exam
-      = link_to_edit [:edit, exam_syllabus.exam]
-      = ajax_link_to_delete [@syllabus, exam_syllabus]
+  tr id="exam-#{exam_syllabus.exam.id}"
+    =render 'syllabuses/exams/exam_fields', :exam_syllabus => exam_syllabus
+    
