--- a/app/views/admissions/_student_chooser.html.slim
+++ b/app/views/admissions/_student_chooser.html.slim
@@ -39,7 +39,13 @@
           = submit_tag t('course_enrollments.add'), :class => 'btn btn-primary'
 .row-fluid
   .span12.well
-    #students-index
+    /#students-index
+      =render 'students/students'
+    #state1.span6
+      h4 State1
+      =render 'students/students'
+    #state2.span6
+      h4 State2
       =render 'students/students'
 = javascript_include_tag "student_chooser"
 
