[view] add right class to guardian delete button

--- a/app/views/students/guardians/_guardian_unit.html.slim
+++ b/app/views/students/guardians/_guardian_unit.html.slim
@@ -12,6 +12,7 @@
 
         = link_to_show [@student, guardian]
         = ajax_link_to_edit [:edit, @student, guardian]
-        = ajax_link_to_delete [@student, guardian], :class => 'delete-student-guardian-link'
+        
+        = ajax_link_to_delete [@student, guardian], :class => 'btn btn-mini btn-danger delete-student-guardian-link'
         
 = javascript_include_tag 'students/guardians'
