--- a/app/views/courses/edit.js.erb
+++ b/app/views/courses/edit.js.erb
@@ -1,2 +1,3 @@
 $('#modal-dialogs').html('<%= render_js_partial("course_modal", {:course => @course}) %>');
 $('#course-modal').modal('show');
+$('.modal-body form').validationEngine();
