--- a/app/views/courses/index.html.slim
+++ b/app/views/courses/index.html.slim
@@ -3,6 +3,7 @@
   .span10
     .row-fluid
       #new-course.hide
+        = render 'form'
     .row-fluid
       .pull-left
         h4.h4-vm.courses-count
