--- a/app/views/students/guardians/contacts/create.js.erb
+++ b/app/views/students/guardians/contacts/create.js.erb
@@ -10,6 +10,7 @@ showNotice("<%= render_flash %>");
 	});
 	var currentContact = $("#contact-<%= @contact.id %>");
 	currentContact.find('.make-primary').addClass('btn-primary');
+	$('#primary-contact').html("<%= @contact.contact_type.name + ':' + @contact.data + '(' + @contact.details + ')' %>");
 <% end %>	
 
 $('.student-guardian-contacts-count').html('<%= print_count(@guardian.contacts.count, t("contacts.list")) %>');
