refactoring enrolling class group to a course

--- a/app/views/courses/enrollments/_enrollments.html.slim
+++ b/app/views/courses/enrollments/_enrollments.html.slim
@@ -1,4 +1,5 @@
-#new-course-class-group-form style='display:none' 
+#new-course-class-group-form-errors
+#new-course-class-group style='display:none' 
   =render :partial => 'courses/enrollments/class_groups/form', :course => @course, :new_course_enrollment => @new_course_enrollment
 .row-fluid
   .pull-left
