--- a/app/views/students/addresses/_address.html.slim
+++ b/app/views/students/addresses/_address.html.slim
@@ -1,7 +1,3 @@
 -unless address.nil? or address.new_record? or !address
   tr id="address-#{address.id}"
-    = render 'shared/fields/address_primary_field', :address => address, :target => [@student, address]
-    = render 'shared/fields/address_fields', :address => address, :target => [@student, address]
-    td
-      = ajax_link_to_edit [:edit, @student, address]
-      = ajax_link_to_delete [@student, address]
+     = render :partial => 'students/addresses/address_fields', :locals => {:address => address, :student => @student, :primary_address => @primary_address}
