--- a/app/views/students/addresses/update.js.erb
+++ b/app/views/students/addresses/update.js.erb
@@ -1,3 +1,3 @@
-$('tr#address-<%= @address.id %>').html('<%= render_js_partial("shared/fields/address_fields", {:address => @address, :target => [@student, @address]}) %>');
+$('tr#address-<%= @address.id %>').html('<%= render_js_partial("students/addresses/address_fields", {:primary_address => @primary_address, :address => @address, :target => [@student, @address]}) %>');
 $(".modal#edit-address-modal").modal("hide");
 showNotice("<%= render_flash %>");
