--- a/app/views/students/guardians/addresses/_address.html.slim
+++ b/app/views/students/guardians/addresses/_address.html.slim
@@ -1,7 +1,3 @@
 -unless address.nil? or address.new_record? or !address
   tr id="address-#{address.id}"
-    = render 'shared/fields/address_primary_field', :address => address, :target => [@student, @guardian, address]
-    = render 'shared/fields/address_fields', :address => address, :target => [@student, @guardian, address]
-    td
-      = ajax_link_to_edit [:edit, @student, @guardian, address]
-      = ajax_link_to_delete [@student, @guardian, address]
+    = render :partial => 'students/guardians/addresses/address_fields',:locals => {:address => address, :student => @student,:guardian =>  @guardian, :primary_address => @primary_address}
