--- a/app/views/students/contacts/destroy.js.erb
+++ b/app/views/students/contacts/destroy.js.erb
@@ -2,5 +2,7 @@ showNotice("<%= render_flash %>");
 $('.student-contacts-count').html('<%= print_count(@student.contacts.count, t("contacts.list")) %>');
 
 <%- unless @student.contacts.blank? %>
-	$('.student-contact-table').find('#contact-<%= @student.contacts.first.id %> .make_primary').addClass('btn-primary');
+	$('#student-contacts-index').find('#contact-<%= @student.contacts.first.id %> td.primary-button a').addClass('btn-primary');
+	console.log($('#contact-<%= @student.contacts.first.id %> td.primary-button a'));
 <% end %>
+
