--- a/app/views/students/guardians/contacts/_contact.html.slim
+++ b/app/views/students/guardians/contacts/_contact.html.slim
@@ -2,9 +2,9 @@ tr id="contact-#{contact.id}" class="guardian-contact"
   - @target = [@student, @guardian, contact]
   td class="primary-button"
     -if @target.last.is_primary?
-      = link_to ("<i class='icon-white icon-ok'></i>").html_safe, [:make_primary] + @target, :data => {:confirm => 'are you sure?'}, :class => 'btn btn-mini btn-primary make-primary', :remote => true, :method => :post
+      = link_to ("<i class='icon-white icon-ok'></i>").html_safe, [:make_primary] + @target, :data => {:confirm => t('confirm')}, :class => 'btn btn-mini btn-primary make-primary', :remote => true, :method => :post
     -else
-    	= link_to ("<i class='icon-white icon-ok'></i>").html_safe, [:make_primary] + @target, :id => 'set-primary-link', :data => {:confirm => 'are you sure?'}, :class => 'btn btn-mini', :remote => true, :method => :post
+    	= link_to ("<i class='icon-white icon-ok'></i>").html_safe, [:make_primary] + @target, :id => 'set-primary-link', :data => {:confirm => t('confirm')}, :class => 'btn btn-mini', :remote => true, :method => :post
   = render 'shared/fields/contact_fields', :target => @target 
   td
     = ajax_link_to_edit [:edit] + @target
