TEST admissions index

--- a/app/views/admissions/_student_chooser.html.slim
+++ b/app/views/admissions/_student_chooser.html.slim
@@ -19,7 +19,7 @@
           = hidden_field_tag "source", "class_groups"
           h4 = "Adding students to " + @class_group.name
           = submit_tag t('enroll_to_class'), :class => 'btn btn-primary'
-      -elsif !@course.nil?
+      - elsif !@course.nil?
         = form_tag( enroll_students_course_enrollments_path, :method => "post", :id => "enroll-to-course-form", :remote => true) do
           = hidden_field_tag "course_id", @course.id
           = hidden_field_tag "source", "courses"
@@ -38,7 +38,7 @@
 
           = submit_tag t('course_enrollments.add'), :class => 'btn btn-primary'
 .row-fluid
-  .span12.well
+  .span12.well style="margin-bottom:0px"
     /#students-index
       =render 'students/students'
     #state1.span6
