Fix view rendering for class_groups

--- a/core/app/views/gaku/class_groups/index.html.slim
+++ b/core/app/views/gaku/class_groups/index.html.slim
@@ -14,5 +14,5 @@
     .row-fluid
       .span12.well
         #class-groups-index
-          =render 'class_groups/class_groups'
+          =render 'class_groups'
     .row-fluid
