Fixed the css in test_app

--- a/core/app/views/gaku/admin/contact_types/index.html.slim
+++ b/core/app/views/gaku/admin/contact_types/index.html.slim
@@ -1,4 +1,4 @@
-= Rails.application.assets['application.js'].dependencies
+/= Rails.application.assets['application.js'].dependencies
 #admin-contact-types
   #new-admin-contact-type.hide
   .row-fluid
