--- a/core/app/views/gaku/shared/_menubar.html.slim
+++ b/core/app/views/gaku/shared/_menubar.html.slim
@@ -2,7 +2,7 @@
   .navbar-inner
     .container-fluid
       a.brand href=root_path = image_tag('gaku-logo.png') 
-      - if user_signed_in?
+      /- if user_signed_in?
         = render :partial => "shared/global_menu"
         = render :partial => "shared/login_widget"
         /= render :partial => "shared/language_bar"
