--- a/core/app/views/gaku/layouts/gaku.html.slim
+++ b/core/app/views/gaku/layouts/gaku.html.slim
@@ -3,21 +3,21 @@ html
   head
     title
       = content_for?(:title) ? yield(:title) + " | GAKUEngine" : "GAKUEngine"
-    = stylesheet_link_tag    "application"
+    = stylesheet_link_tag    "all"
     = stylesheet_link_tag    params[:controller] if Rails.application.assets.find_asset("#{params[:controller]}.css")
-    = javascript_include_tag "application" 
+    /= javascript_include_tag "all" 
     = javascript_include_tag params[:controller] if Rails.application.assets.find_asset("#{params[:controller]}.js")
     = csrf_meta_tags
   body
     javascript:
       I18n.defaultLocale = "#{{I18n.default_locale}}";
       I18n.locale = "#{{I18n.locale}}";
-    = render :partial => 'shared/modal_config'
-    = render :partial => "shared/menubar"
+    = render :partial => 'gaku/shared/modal_config'
+    = render :partial => "gaku/shared/menubar"
     .container-fluid
       #notice
         -unless flash.empty?
-          = render "shared/flash", :flash => flash
+          = render "gaku/shared/flash", :flash => flash
       #errors
       = yield
       = javascript_include_tag "gakuengine"
