[fix] render paths for gaku engine

--- a/core/app/views/gaku/students/_student_chooser.html.slim
+++ b/core/app/views/gaku/students/_student_chooser.html.slim
@@ -1,4 +1,4 @@
-=render 'students/search/form'
+=render 'gaku/students/search/form'
 
 .row-fluid.hide#students-checked-div
   .span6.well
@@ -41,7 +41,7 @@
 .row-fluid
   .span12.well
     #students-index
-      =render 'students/students'
+      =render 'gaku/students/students'
 = javascript_include_tag "student_chooser"
 
 
