--- a/core/app/views/gaku/students/index.html.slim
+++ b/core/app/views/gaku/students/index.html.slim
@@ -9,8 +9,8 @@
     = button t("students.import"), "students/importer", :id => "import-students-link", :class => 'mr-s btn btn-primary'
     = button t("students.export"), "students.csv", :id => 'export-students-link', :class => 'btn'
 #new-student.hide
-  = render 'form'
+  = render 'gaku/students/form'
 .row-fluid
   .span12
     hr/
-  =render 'student_chooser'
+  =render 'gaku/students/student_chooser'
