--- a/core/app/views/gaku/students/search/_form.html.slim
+++ b/core/app/views/gaku/students/search/_form.html.slim
@@ -15,9 +15,9 @@
               = t('address')
         .tab-content
           #student.tab-pane.active
-            = render :partial => 'students/search/student', :locals => {:f => f}
+            = render :partial => 'gaku/students/search/student', :locals => {:f => f}
           #address.tab-pane
-            = render :partial => 'students/search/address', :locals => {:f => f}
+            = render :partial => 'gaku/students/search/address', :locals => {:f => f}
   = hidden_field_tag "autocomplete_field"
   = hidden_field_tag "enrolled_students", @enrolled_students 
   #selected-students.hide
