--- a/core/app/views/gaku/admin/presets/students.html.slim
+++ b/core/app/views/gaku/admin/presets/students.html.slim
@@ -6,7 +6,7 @@
         = students_gender.select :students_gender,  options_for_select([[t('genders.male'), true], [t('genders.female'),false]], :selected => @preset_hash[:students_gender]), :prompt => t('students.choose_gender')
       = fields_for 'presets' do |address_country|
         = address_country.label :address_country, t('admin.presets.students.country')
-        = address_country.select :address_country, options_for_select(Country.all.sort_by(&:name).collect{|s| [s.name, s.id]},:selected => @preset_hash[:address_country]), {:prompt => t('addresses.choose_country')}
+        = address_country.select :address_country, options_for_select(Gaku::Country.all.sort_by(&:name).collect{|s| [s.name, s.id]},:selected => @preset_hash[:address_country]), {:prompt => t('addresses.choose_country')}
       = fields_for 'presets' do |address_state|
         = address_state.label :address_state, t('admin.presets.students.state')
         = address_state.text_field :address_state, :value => @preset_hash[:address_state]
