[views] add namespace for admissions form fields

--- a/core/app/views/gaku/admissions/_admission_form_fields.html.slim
+++ b/core/app/views/gaku/admissions/_admission_form_fields.html.slim
@@ -3,22 +3,22 @@
 .row-fluid
   .span6
     = form.label :faculty_id, t("admissions.candidates.course"), :class => "control-label"
-    = form.collection_select :faculty_id, Faculty.all, :id, :name, {}, {:class => 'span12'}
+    = form.collection_select :faculty_id, Gaku::Faculty.all, :id, :name, {}, {:class => 'span12'}
 .row-fluid
   h4 = t("admissions.selects.department")
 .row-fluid
   .span6
     = form.label :first_choice, t("admissions.candidates.first_choice"), :class => "control-label"
-    = collection_select :first_choice, :id, Faculty.all, :id, :name, {}, {:class => 'span12'}
+    = collection_select :first_choice, :id, Gaku::Faculty.all, :id, :name, {}, {:class => 'span12'}
   .span6
     = form.label :second_choice, t("admissions.candidates.second_choice"), :class => "control-label"
-    = collection_select :second_choice, :id, Faculty.all, :id, :name, {}, {:class => 'span12'}
+    = collection_select :second_choice, :id, Gaku::Faculty.all, :id, :name, {}, {:class => 'span12'}
 .row-fluid
   h4 = t("admissions.inputs.candidate")
 .row-fluid
   .span6
     = form.label :class_group_id, t("admissions.candidates.junior_high_school"), :class => "control-label"
-    = form.collection_select :class_group_ids, School.all, :id, :name, {}, {:class => 'span12'}
+    = form.collection_select :class_group_ids, Gaku::School.all, :id, :name, {}, {:class => 'span12'}
 .row-fluid
   .span3
     = form.label :surname, t("name")+" ("+t("surname")+")", :class => "control-label pull-left"
