[views] add namespace for admissions student chooser

--- a/core/app/views/gaku/admissions/_student_chooser.html.slim
+++ b/core/app/views/gaku/admissions/_student_chooser.html.slim
@@ -1,4 +1,4 @@
-=render 'students/search/form'
+=render 'gaku/students/search/form'
 
 .row-fluid.hide#students-checked-div
   .span6.well
@@ -40,13 +40,13 @@
 .row-fluid
   .span12.well
     /#students-index
-      =render 'students/students'
+      =render 'gaku/students/students'
     #state1.span6
       h4 State1
-      =render 'students/students'
+      =render 'gaku/students/students'
     #state2.span6
       h4 State2
-      =render 'students/students'
+      =render 'gaku/students/students'
 = javascript_include_tag "student_chooser"
 
 
