[views] add namespace for syllabuses index

--- a/core/app/views/gaku/syllabuses/index.html.slim
+++ b/core/app/views/gaku/syllabuses/index.html.slim
@@ -14,5 +14,5 @@
         =render 'form'
     .row-fluid
       .span12.well
-        =render 'syllabuses/syllabuses'
+        =render 'gaku/syllabuses/syllabuses'
         
