--- a/core/app/views/gaku/class_groups/courses/_form.html.slim
+++ b/core/app/views/gaku/class_groups/courses/_form.html.slim
@@ -10,4 +10,4 @@
         = submit_button t("courses.save"), :id => 'submit-class-group-course-button', :class => "span6 btn btn-primary"
         = link_to_cancel :id => "cancel-class-group-course-link"
 
-= javascript_include_tag 'class_groups/courses'
+= javascript_include_tag 'gaku/class_groups/courses'
