--- a/core/app/views/gaku/class_groups/student_chooser.js.erb
+++ b/core/app/views/gaku/class_groups/student_chooser.js.erb
@@ -1,2 +1,2 @@
-$('#modal-dialogs').html('<%== render_js_partial("class_groups/students/student_modal") %>');
+$('#modal-dialogs').html('<%= render_js_partial("gaku/class_groups/students/student_modal") %>');
 $('#student-modal').modal('show');
