--- a/core/app/views/gaku/class_groups/students/_student_modal.html.slim
+++ b/core/app/views/gaku/class_groups/students/_student_modal.html.slim
@@ -1,7 +1,7 @@
 
-- model = @class_group_enrollment || ClassGroupEnrollment.new
+- model = @class_group_enrollment || Gaku::ClassGroupEnrollment.new
 - model_class = model.class
 .modal.hide#student-modal wmode="opaque" style="display: block;padding: 41px;position: absolute;left: 500px;top: 300px;width:auto;height:auto;text-align:center;"
 
-  = render 'students/student_chooser'
+  = render 'gaku/students/student_chooser'
   = link_to_cancel :class => 'span3 btn btn-danger', :id => 'cancel-class-group-student-link'
