--- a/core/app/views/gaku/class_groups/students/enroll_students.js.erb
+++ b/core/app/views/gaku/class_groups/students/enroll_students.js.erb
@@ -1,7 +1,7 @@
 $("#class-group-students-index tbody").html('');
 
 <% @class_group.class_group_enrollments.each {|enrollment| %>
-  $('#class-group-students-index tbody').append('<%= render_js_partial("class_groups/students/student", {:enrollment => enrollment}) %>');
+  $('#class-group-students-index tbody').append('<%= render_js_partial("student", {:enrollment => enrollment}) %>');
 <% } %>
 
 $('#class-group-enrollments-tab-link').html('<%= print_count(@class_group.class_group_enrollments.count, t("class_group_enrollments.list")) %>');
