--- a/core/app/views/gaku/class_groups/courses/_form.html.slim
+++ b/core/app/views/gaku/class_groups/courses/_form.html.slim
@@ -3,7 +3,7 @@
     .span12.well
       .row-fluid
         = f.label :course_code, t("courses.code"), :class => "control-label"
-        = f.select :course_id, Course.all.collect { |c| ["#{c.code}", c.id] }, {:prompt => t('courses.choose_course')}, :class => "span12 validate[required]"
+        = f.select :course_id, @courses.collect { |c| ["#{c.code}", c.id] }, {:prompt => t('courses.choose_course')}, :class => "span12 validate[required]"
         = f.hidden_field :class_group_id, :value => @class_group.id
     
       .row-fluid.mt-s
