[fix|views] courses/index paths

--- a/core/app/views/gaku/courses/_form.html.slim
+++ b/core/app/views/gaku/courses/_form.html.slim
@@ -11,7 +11,7 @@
     .span12.well
       .span6
         = course_form.label :syllabus_id, t("syllabus")
-        = course_form.select :syllabus_id, Syllabus.all.collect { |s| [s.name, s.id] }, {}, :class => "span12"
+        = course_form.select :syllabus_id, @syllabuses.collect { |s| [s.name, s.id] }, {}, :class => "span12"
       .span6
         = course_form.label :code, t('courses.code')
         = course_form.text_field :code, :placeholder => t('courses.code_sample'), :class => "span12 validate[required]"
