--- a/core/app/views/gaku/exams/show.html.slim
+++ b/core/app/views/gaku/exams/show.html.slim
@@ -8,4 +8,4 @@
       .span12
         hr/
     #exam-show
-      =render 'exams/exam_show', :exam => @exam
+      =render 'gaku/exams/exam_show', :exam => @exam
