--- a/core/app/views/gaku/shared/error.js.erb
+++ b/core/app/views/gaku/shared/error.js.erb
@@ -1,2 +1,2 @@
-$("#errors").html("<%= escape_javascript(render :partial => 'shared/errors', :locals => {:target => target}) %>");
+$("#errors").html("<%= escape_javascript(render :partial => 'gaku/shared/errors', :locals => {:target => target}) %>");
 $("#errors").show(3);
