--- a/core/app/views/gaku/shared/notice.js.erb
+++ b/core/app/views/gaku/shared/notice.js.erb
@@ -1,2 +1,2 @@
-$('#notice').html("<%= escape_javascript(render 'shared/flash', :flash => flash) %>");
+$('#notice').html("<%= escape_javascript(render 'gaku/shared/flash', :flash => flash) %>");
 $("#notice").show(3);
