[wip/fix] admin/schools tree specs and fixes

--- a/core/app/views/gaku/admin/schools/_form.html.slim
+++ b/core/app/views/gaku/admin/schools/_form.html.slim
@@ -11,4 +11,4 @@
                 = submit_button t('schools.save'), :id => 'submit-admin-school-button'
               = link_to_cancel :id => 'cancel-admin-school-link'
 
-= javascript_include_tag 'admin/schools'
+= javascript_include_tag 'gaku/admin/schools'
