--- a/core/app/views/gaku/admin/schools/campuses/_form.html.slim
+++ b/core/app/views/gaku/admin/schools/campuses/_form.html.slim
@@ -11,4 +11,4 @@
               = submit_button t('campuses.save'), :id => 'submit-admin-school-campus-button'
             = link_to_cancel :id => 'cancel-admin-school-campus-link'
   
-= javascript_include_tag 'admin/schools/campuses'
+= javascript_include_tag 'gaku/admin/schools/campuses'
