--- a/core/app/views/gaku/admin/schools/index.html.slim
+++ b/core/app/views/gaku/admin/schools/index.html.slim
@@ -20,5 +20,5 @@
           th.btn-inverse =t('schools.grades')
           th.btn-inverse =t('contacts.actions')
       tbody
-        =render :partial => 'admin/schools/school', :collection => @schools, :as => 'school'
+        =render :partial => 'gaku/admin/schools/school', :collection => @schools, :as => 'school'
     br/
