--- a/core/app/views/gaku/admin/schools/campuses/addresses/_form.html.slim
+++ b/core/app/views/gaku/admin/schools/campuses/addresses/_form.html.slim
@@ -3,12 +3,12 @@
     b= t('addresses.new')
     .row-fluid.mt-l
       .span12.well
-        = render 'shared/form_fields/address_form_fields', :address_form => address_form 
+        = render 'gaku/shared/form_fields/address_form_fields', :address_form => address_form 
         .row-fluid
           .span12
             .span6
               = submit_button t('addresses.save'), :id => 'submit-admin-school-campus-address-button'
             = link_to_cancel :id => 'cancel-admin-school-campus-address-link'
   
-= javascript_include_tag 'shared/address'
-= javascript_include_tag 'admin/schools/campuses/addresses'
+= javascript_include_tag 'gaku/shared/address'
+= javascript_include_tag 'gaku/admin/schools/campuses/addresses'
