--- a/core/app/views/gaku/admin/schools/campuses/contacts/create.js.erb
+++ b/core/app/views/gaku/admin/schools/campuses/contacts/create.js.erb
@@ -1,5 +1,5 @@
 <%- if @contact.errors.any? %>
-	$('#new-admin-school-campus-contact-form-errors').html('<%= render_js_partial("shared/errors", {:target => @contact}) %>');
+	$('#new-admin-school-campus-contact-form-errors').html('<%= render_js_partial("gaku/shared/errors", {:target => @contact}) %>');
 <%- else %>
   $('.admin-school-campus-contacts-count').html('<%= print_count(@campus.contacts.count, t("contacts.list")) %>');
 
