--- a/core/app/views/gaku/shared/form_fields/_address_form_fields.html.slim
+++ b/core/app/views/gaku/shared/form_fields/_address_form_fields.html.slim
@@ -5,7 +5,7 @@
 .row-fluid.control-group
   .span6
     = address_form.label :country, t("addresses.country"), :class => "control-label"
-    = address_form.select :country_id, Country.all.sort_by(&:name).collect{|s| [s.name, s.id]}, {:prompt => t('addresses.choose_country')}, :class => "validate[required] span12", :id => "country_dropdown", "data-prompt-position" => "bottomRight:5"
+    = address_form.select :country_id, Gaku::Country.all.sort_by(&:name).collect{|s| [s.name, s.id]}, {:prompt => t('addresses.choose_country')}, :class => "validate[required] span12", :id => "country_dropdown", "data-prompt-position" => "bottomRight:5"
   .span6
     = address_form.label :zipcode, t("addresses.zipcode"), :class => "control-label"
     .row-fluid
