--- a/core/app/views/gaku/shared/form_fields/_contact_form_fields.html.slim
+++ b/core/app/views/gaku/shared/form_fields/_contact_form_fields.html.slim
@@ -3,7 +3,7 @@
 	=contact_form.check_box :is_primary
 .row-fluid
 	=contact_form.label :contact_type
-	=contact_form.select :contact_type_id, ContactType.all.collect {|ct| [ct.name, ct.id]}, {:prompt => "Choose Contact Type"}, {:class => "validate[required]", "data-prompt-position" => "bottomRight:5"}
+	=contact_form.select :contact_type_id, Gaku::ContactType.all.collect {|ct| [ct.name, ct.id]}, {:prompt => "Choose Contact Type"}, {:class => "validate[required]", "data-prompt-position" => "bottomRight:5"}
 .row-fluid
 	=contact_form.label :data
 	=contact_form.text_field :data, :class => "validate[required] span12", "data-prompt-position" => "bottomRight:5"
