--- a/core/app/views/gaku/course_groups/_delete_confirm.html.slim
+++ b/core/app/views/gaku/course_groups/_delete_confirm.html.slim
@@ -3,7 +3,7 @@ row-fluid
     #course-group-delete
       =link_to 'Delete', "#", :id => 'delete-course-group-link', :class => 'pull-right'
   .delete-modal
-    =render 'shared/delete_modal', :target => [:soft_delete, @course_group]
+    =render 'gaku/shared/delete_modal', :target => [:soft_delete, @course_group]
     
 coffee:
   $('#delete-course-group-link').on 'click', (e)->
