--- a/core/app/views/gaku/students/_student_index.html.slim
+++ b/core/app/views/gaku/students/_student_index.html.slim
@@ -44,6 +44,6 @@ table#student-index.table.table-bordered.table-striped
         #student-commute-method
           #student-commute-method-form
           -if student.commute_method
-            =render 'students/commute_methods/commute_method', :student => student
+            =render 'gaku/students/commute_methods/commute_method', :student => student
           -else
-            =link_to t("add"), new_student_commute_method_path(student, CommuteMethod.new), :remote => true,:id => 'new-student-commute-method-link'
+            =link_to t("add"), new_student_commute_method_path(student, @new_commute_method), :remote => true,:id => 'new-student-commute-method-link'
