--- a/core/app/views/gaku/students/_student_modal.html.slim
+++ b/core/app/views/gaku/students/_student_modal.html.slim
@@ -14,7 +14,7 @@
 		          li= msg
 		  .row-fluid
 		    .span12.well
-		      =render :partial => 'student_form_fields', :locals => { :form => form }
+		      =render :partial => 'gaku/student_form_fields', :locals => { :form => form }
 
 		  .row-fluid
 		    .span12.well
