[fix] namespacing course_groups

--- a/core/app/views/gaku/course_groups/create.js.erb
+++ b/core/app/views/gaku/course_groups/create.js.erb
@@ -1,5 +1,5 @@
 <%- if @course_group.errors.any? %>
-  $('#course-group-form-errors').html('<%= render_js_partial("shared/errors", {:target => @course_group}) %>');
+  $('#course-group-form-errors').html('<%= render_js_partial("gaku/shared/errors", {:target => @course_group}) %>');
 <% else %>
 	$('#course-groups-index tbody').append('<%= render_js_partial("course_group", {:course_group => @course_group}) %>');
 	showNotice("<%= render_flash %>");
