--- a/core/app/views/gaku/course_groups/course_group_enrollments/error.js.erb
+++ b/core/app/views/gaku/course_groups/course_group_enrollments/error.js.erb
@@ -1,2 +1,2 @@
-$('#course-group-enrollment-form-errors').html('<%= render_js_partial("/shared/errors", {:target => @course_group_enrollment} ) %>');
+$('#course-group-enrollment-form-errors').html('<%= render_js_partial("/gaku/shared/errors", {:target => @course_group_enrollment} ) %>');
 $('#course-group-enrollment-course-id').val('');
